test/expected/explain_sc32.out
explain signed char32_t x
               ^
16: error: "signed char32_t" is illegal for built-in type
